--- a/exercicios/ex026/mq002/estilos/paisagem.css
+++ b/exercicios/ex026/mq002/estilos/paisagem.css
@@ -3,4 +3,5 @@
 body {
     background: url(../imagens/cev-landscape.jpg);
     background-position: left bottom;
+    background-repeat: no-repeat;
 }
