--- a/exercicios/ex027/flex013 - menu flexbox/style.css
+++ b/exercicios/ex027/flex013 - menu flexbox/style.css
@@ -15,17 +15,43 @@ body {
 }
 
 header {
+    height: auto;
+    width: 100%;
     background-color: gray;
     color: white;
     padding: 10px;
+    display: flex;
+    flex: row wrap;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
 }
 
 header h1 {
     border: 1px dotted black;
+    flex: 0 0 200px;
 }
 
 header nav {
     border: 1px dotted black;
+    display: flex;
+    flex-flow: row wrap;
+}
+
+header > nav > a {
+    background-color: black;
+    color: white;
+    padding: 10px;
+    margin: 5px;
+    border-radius: 5px;
+    text-decoration: none;
+    text-align: center;
+    transition: .5s;
+}
+
+header > nav > a:hover {
+    background-color: white;
+    color: black;
 }
 
 main {
